plugins {
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'java'
	id 'war'
	id 'eclipse' // optional (to generate Eclipse project files)
	id 'idea' // optional (to generate IntelliJ IDEA project files)
	id "com.google.cloud.tools.jib" version "3.3.1"
}

group = 'oss.fosslight'
version = '2.0.1'

sourceCompatibility = '17'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
	compile {
		exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
	}
}

repositories {
	mavenCentral()
}

test {
	maxHeapSize="2048m"
	useJUnitPlatform()
}

processResources {
    filesMatching('**/application.properties') {
        expand(project.properties)
    }
}

bootWar.enabled = true // (1)
war.enabled = false  // (2)

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-integration'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.session:spring-session-core'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude module: 'junit'
	}
	testImplementation('org.springframework.security:spring-security-test')

	testImplementation(platform('org.junit:junit-bom:5.10.0'))
	testImplementation('org.junit.jupiter:junit-jupiter')

	implementation 'javax.cache:cache-api:1.1.1'
	implementation ('org.ehcache:ehcache:3.10.8') {
		capabilities {
			requireCapability('org.ehcache:ehcache-jakarta')
		}
	}
	
//	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.6.5'
//	implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.6.5'
//	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-velocity', version: '1.4.7.RELEASE'
	
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	
//	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.2'
//	implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.0'
//	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.2'
//	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
	
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	//implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.1'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	implementation 'org.postgresql:postgresql:42.7.2'

	implementation 'org.apache.httpcomponents.client5:httpclient5'
//	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
//	implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.63'
//	implementation group: 'org.apache.taglibs', name: 'taglibs-standard-impl', version: '1.2.5'
//	implementation group: 'org.apache.tiles', name: 'tiles-jsp', version: '3.0.8'
//	implementation group: 'org.apache.tiles', name: 'tiles-core', version: '3.0.8'
//	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
	
	// 삭제
	//implementation 'org.apache.commons:commons-csv:1.10.0'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.11.0'
	
	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
	implementation group: 'org.apache.poi', name: 'poi-excelant', version: '5.2.3'
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
	//implementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.1.2'
	implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.2.3'
	
	//implementation group: 'org.apache.poi', name: 'poi', version: '4.1.2'
	//implementation group: 'org.apache.poi', name: 'poi-excelant', version: '4.1.2'
	//implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
	//implementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.1.2'
	//implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '4.1.2'
	
//	implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
	
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.16.1'
	//implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
	implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
	implementation group: 'joda-time', name: 'joda-time', version: '2.12.7'
	
	//implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
	//implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
	implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
	
	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.3'
	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.3'
	//implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.13.3'
	
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.16.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.16.1'
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.16.1'
	
	//implementation group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
	//implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
	implementation group: 'org.json', name: 'json', version: '20231013'
	//implementation group: 'net.minidev', name: 'json-smart', version: '2.5.0'

	implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
	implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
	implementation group: 'org.jsoup', name: 'jsoup', version: '1.17.2'
	
	//implementation group: 'com.googlecode.juniversalchardet', name: 'juniversalchardet', version: '1.0.3'
	implementation group: 'com.googlecode.java-diff-utils', name: 'diffutils', version: '1.3.0'
	
	implementation group: 'net.sf.sociaal', name: 'xmlpull-xpp3', version: '3.0.0.20130526'
	
	//implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'

	implementation group: 'org.spdx', name: 'tools-java', version: '1.1.8'

	implementation group: "org.springdoc", name: "springdoc-openapi-starter-webmvc-ui", version: '2.6.0'
    implementation group: 'com.navercorp.lucy', name: 'lucy-xss', version: '1.6.3'

	//implementation 'com.itextpdf:itext7-core:7.2.3'
	implementation 'com.itextpdf:html2pdf:4.0.3'

	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
    implementation group: "jakarta.xml.bind", name: "jakarta.xml.bind-api", version: "4.0.2"
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'
	//runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.10.7'
	//runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.10.7'
	
	//testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
	implementation group: 'org.springframework.ldap', name: 'spring-ldap-core', version: '2.3.8.RELEASE'
	
	implementation group: 'org.cyclonedx', name: 'cyclonedx-core-java', version: '8.0.3'

	implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.3'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	implementation files('libs/tlsh-4.6.0.jar')
}
